# wikidata-producer

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yml  python.yml
config/: redis.conf
hooks/: pre-commit
make/: _install.mk  _lint.mk  _package.mk  _test.mk  main.mk
migrations/: README.md
migrations/battle_events/: 0001_create_battle_events_table.up.sql
migrations/events/: 0001_create_battle_events_table.down.sql  0002_add_name_to_battle_events.down.sql  0002_add_name_to_battle_events.up.sql  0003_add_hash_to_battle_events.down.sql  0003_add_hash_to_battle_events.up.sql
migrations/locations/: 0001_init.up.sql  0002_modify.down.sql  0002_modify.up.sql
scripts/: create_migration  downgrade_db  upgrade_db
src/wikidata_consumer/: main.py  models.py
src/wikidata_consumer/models/: __init__.py  battle_event.py
src/wikidata_producer/: __init__.py  daemon.py  main.py  producer.py  query.py
src/wikidata_producer/interchange/: __init__.py  checksum_cache.py  kafka_producer.py  producer.py  query.py  redis_checksum_cache.py  wikidata_http_source.py  wikidata_kafka_producer.py  wikidata_source.py
src/wikidata_producer/models/: __init__.py  battle_event.py  json_serializable.py  kafka_message.py  kafka_message_type.py
tests/: docker-compose.yaml  test_main.py
tests/integration_tests/: test_daemon.py  test_producer.py
tests/unit_tests/: test_daemon.py
