[metadata]
name = wikidata-producer
url = https://github.com/ChronoAtlas/wikidata-producer
maintainer = Andreas Krühlmann
maintainer_email = andreas@kruhlmann.dev
description = Wikidata producer for historical battles
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.9
setup_requires =
install_requires =
    flexidate == 1.4
    requests == 2.31.0
    typer >= 0.4.1
    kafka-python == 2.0.2

[options.extras_require]
all =
    %(dev)s
    %(tests)s
dev =
    add-trailing-comma == 3.1.0
    black == 24.2.0
    isort ==5.13.2
    mypy == 1.8.0
    mypy-extensions == 1.0.0
    nitpick == 0.35.0
    wemake-python-styleguide == 0.18.0
    wheel == 0.42.0
tests =
    pytest == 8.0.0
    pytest-cov == 4.1.0
    pytest-runner == 6.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wikidata_producer = wikidata_producer.main:app

[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = true
omit = src/wikidata_producer/version.py
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
docstring-style = google
format = wemake
ignore = WPS305,D100,D101,D102,D103,D104,D105,D106,D107,H601,WPS115,WPS306,WPS410,WPS412,WPS421,E203
max-complexity = 6
max-imports = 16
max-line-length = 120
show-source = True
strictness = long
inline-quotes = double
per-file-ignores =
    tests/**.py:WPS218,WPS432,WPS442,S101
    src/wikidata_producer/version.py:WPS410
    src/wikidata_producer/models/battle_event.py:WPS226

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_single_line = True
force_sort_within_sections = True
include_trailing_comma = True
lexicographical = True
line_length = 120
multi_line_output = 3
single_line_exclusions = typing
src_paths = src,tests

[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
local_partial_types = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
